// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StringRenderer /> should error when no onChange callback is passed 1`] = `"onChange argument is required"`;

exports[`<StringRenderer /> should error when no property config is passed 1`] = `"propertyConfig argument is required"`;

exports[`<StringRenderer /> should render correctly 1`] = `
<div>
  <div>
    <label
      for="name"
    >
      Name
    </label>
    <p>
      The name
    </p>
    <input
      data-testid="string-input"
      id="name"
      type="text"
      value="Foo Bar"
    />
  </div>
</div>
`;

exports[`<StringRenderer /> should render correctly when no description is available 1`] = `
<div>
  <div>
    <label
      for="name"
    >
      Name
    </label>
    <input
      data-testid="string-input"
      id="name"
      type="text"
      value="Foo Bar"
    />
  </div>
</div>
`;
